[project]
name = "exonutils"
version = "6.7"
description = "General tools and utils for modern Python applications."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "exonlabs", email = "info@exonlabs.net" }
]
keywords = [
    "development",
    "utilities",
    "tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # No installation dependencies; stdlib only
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "flake8>=7.3,<8.0",
    "black>=25.11,<26.0",
    "colorama>=0.4,<1.0",
    "setproctitle>=1.3,<2.0",
    "flask>=3.1,<4.0",
    "jinja2>=3.1,<4.0",
    "gunicorn>=23.0,<24.0",
    "sqlalchemy>=2.0,<3.0"
]
docs = [
    "mkdocs>=1.6,<2.0"
]

[project.urls]
Homepage = "https://github.com/exonlabs/py-exonutils"
Repository = "https://github.com/exonlabs/py-exonutils"
Documentation = "https://exonlabs.github.io/py-exonutils"

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"
