[project]
name = "exonutils"
version = "6.8"
description = "General tools and utils for modern Python applications."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "exonlabs", email = "info@exonlabs.net" }
]
keywords = [
    "development",
    "utilities",
    "tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # No installation dependencies; stdlib only
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=1.20",
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "twine>=6.2",
    "colorama>=0.4",
    "setproctitle>=1.3",
    "flask>=3.1",
    "jinja2>=3.1",
    "gunicorn>=25.3",
    "sqlalchemy>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
    "mike>=2.2",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "UP", "W", "B", "N"]

[project.urls]
Homepage = "https://git.exonlabs.net/py-exonutils"
Repository = "https://git.exonlabs.net/py-exonutils"
Documentation = "https://git.exonlabs.net/py-exonutils/wiki"

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"
