[metadata]
name = exonutils
version = attr: exonutils.__version__
url = https://github.com/exonlabs/exonutils
author = ExonLabs
author_email = info@exonlabs.net
license = BSD 3-Clause
description = Basic and common utilities for applications
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
zip_safe = False
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src
